--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -32,4 +32,17 @@
         app:lottie_loop="true"
         app:lottie_rawRes="@raw/progress" />
 
+    <TextView
+        android:id="@+id/sp_version_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#80FFFFFF"
+        android:text="1.0"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/animationView">
+
+    </TextView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
